[tool.poetry]
name = "atinflat-py3-11-6"
version = "0.1.0"
description = ""
authors = ["David Ardell <dardell@ucmerced.edu>"]
readme = "README.md"
packages = [{include = "atinflat_py3"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scipy = "^1.11.3"
bitstring = "^4.1.2"
sympy = "^1.12"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
